Changes in version 0.12
=======================

STILL UNDER DEVELOPMENT; NOT RELEASED YET.

* Issue 2: Added the executor, a new implementation of the test
  execution engine purely in C++ that supports parallel execution of
  test cases.  The goal is to eventually replace all the C testers with
  this new code.

* Issue 2: Added the new 'parallelism' configuration property to
  kyua.conf.  This setting indicates the degree of parallelism to use
  when running test cases using the new executor.  Currently defaults
  to 1 to preserve sequential behavior, but this will eventually be
  bumped to a greater value once the new implementation gets some
  mileage.

* Changed temporary directory creation to always grant search
  permissions on temporary directories.  This is to prevent potential
  problems when running Kyua as root and executing test cases that
  require dropping privileges (as they may later be unable to use
  absolute paths that point inside their work directory).

* Improved 'kyua report --verbose' to properly handle environment
  variables with continuation lines in them, and fixed the integration
  tests for this command to avoid false negatives.

* Changed the configuration file format to accept the definition of
  unknown variables without declaring them local.  The syntax version
  number remains at 2.  This is to allow configuration files for newer
  Kyua versions to work on older Kyua versions, as there is no reason
  to forbid this.

* Fixed stacktrace gathering with FreeBSD's ancient version of GDB.
  GDB 6.1.1 (circa 2004) does not have the -ex flag so we need to
  generate a temporary GDB script and feed it to GDB with -x instead.


Changes in version 0.11
=======================

Released on October 23rd, 2014.

* Added support to print the details of all test cases (metadata and
  their output) to 'report'.  This is via a new '--verbose' flag which
  replaces the previous '--show-context'.
